# vocabulary

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
db/migrations/: 001_initial.py  002_processed_telegram_updates.py
src/: cli.py  enums.py  healthcheck.py  main.py  piccolo_conf.py
src/config/: app.py  db.py
src/db/: __init__.py  engine.py  llm_generation.py  piccolo_app.py  processed_telegram_update.py  user.py  user_word.py  word.py  word_meaning.py
src/schemas/: vocabulary.py
src/services/: review.py  users.py  vocabulary.py
src/telegram_handlers/: context.py  decorators.py  idempotency.py  review.py  review_jobs.py  vocabulary.py
